# MuscleFormAnalyzer

./: .env.example  .gitignore  .lighthouserc.js  .replit  .vercelignore  BODY_MEASUREMENT_VIDEO_FIX.md  DEPLOYMENT_FINAL_FIX.md  DEPLOYMENT_FIX.md  Dockerfile.backend  FEATURE_ACCESSIBILITY_REPORT.md  FIREBASE_OAUTH_SETUP_GUIDE.md  FIREBASE_QUICK_SETUP.md  FIREBASE_REDIRECT_URI_FIX.md  GOOGLE_AUTH_FIX.md  GOOGLE_LOGIN_EMERGENCY_CHECK.md  GOOGLE_LOGIN_FIX.md  GOOGLE_OAUTH_FIX.md  GOOGLE_OAUTH_FIX_GUIDE.md  HEIGHT_MEASUREMENT_IMPROVEMENT_GUIDE.md  HOW_TO_RUN.md  LOCAL_DEVELOPMENT.md  Makefile  NEXTJS_DEPLOYMENT_SOLUTION.md  QUICKSTART.md  RAILWAY_DEPLOYMENT.md  README.md  README_BODYSCALE.md  TENAX_FIT_BRANDING_UPDATE.md  TENAX_FIT_V3_DOCUMENTATION.md  TEST_SCENARIOS.md  UX_IMPROVEMENT_CYCLE.md  VERCEL_DEPLOYMENT_FIX.md  VERCEL_ENV_FIX.md  VERCEL_OAUTH_COMPLETE_GUIDE.md  WEEKLY_UX_WORKFLOW.md  agent_receive.sh  agent_send.sh  analysis.py  app.py  app_local.py  (+41 more)
analysis/: step04_temporal.py  step05_voting.py  step06_rulegate.py  training_analysis.py
api/: __init__.py
attached_assets/: Pasted---1747814037438.txt  Pasted---1747817454913.txt  Pasted---1749027126751.txt  Pasted--2-1--1747813773577.txt  Pasted--BodyScale-1-Le-1748336042601.txt  Pasted--BodyScale-RIZAP-AI--1748494468063.txt  Pasted--BodyScale-TENAX-P-1748723076293.txt  Pasted--Firebase-Authentication-TENA-1748723647894.txt  Pasted--MuscleFormAnalyzer-MuscleFormAnalyzer--1749451061585_1749451061589.txt  Pasted--Stepwise-Exercise-Classifier-Booster-pose-analyzer--1747329110584.txt  (+3 more)
backend/: .dockerignore  (+17 more)
(+409 files in other folders)
