[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "mediapipe==0.10.21",
    "numpy>=1.26.4",
    "opencv-python==4.11.0.86",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "uvicorn[standard]>=0.34.2",
    "werkzeug>=3.1.3",
]
